# adl2flowchart

./: .gitignore  CLAUDE.md  Makefile  README.md  REGION_ANALYSIS.md  VERIFICATION_REPORT.md  reg.adl  run_tests.sh  smash
adl/: Makefile  Parser.cpp  Parser.h  adl  (+22 more)
reimplementation/adl2/: .gitignore  BUILD_NOTES.md  BUILD_REPORT.md  COUNTEREXAMPLES.md  Cargo.toml  MULTIFILE_PLAN.md  NANOAOD_PLAN.md  PIPELINE_REPORT.md  README.md  REVIEW_FINDINGS.md
reimplementation/adl2/crates/adl-analysis/: Cargo.toml
reimplementation/adl2/crates/adl-analysis/src/: encode.rs  engine.rs  interval.rs  lib.rs  reconcile.rs  render.rs  report.rs  witness.rs
reimplementation/adl2/crates/adl-analysis/tests/: analysis_behaviors.rs  combine.rs  cross_file.rs  golden_battery.rs  golden_cross.rs  golden_regions.rs  report_rendering.rs  soundness_review_regressions.rs
reimplementation/adl2/crates/adl-analysis/tests/fixtures/: opaque_pt_ratio_empty.adl
reimplementation/adl2/crates/adl-analysis/tests/snapshots/: report_rendering__default_cms_sus_16_032.snap  report_rendering__default_cms_sus_16_033.snap  report_rendering__default_reject_or_band.snap
reimplementation/adl2/crates/adl-axioms/: Cargo.toml
reimplementation/adl2/crates/adl-axioms/src/: lib.rs
reimplementation/adl2/crates/adl-axioms/tests/: axioms_hold.rs
reimplementation/adl2/crates/adl-certify/: Cargo.toml
reimplementation/adl2/crates/adl-certify/src/: bundle.rs  certificate.rs  constraint.rs  fm.rs  lib.rs  saturate.rs  search.rs
reimplementation/adl2/crates/adl-certify/tests/: budget.rs  hand_cases.rs  property.rs  tamper.rs
reimplementation/adl2/crates/adl-cli/: Cargo.toml
reimplementation/adl2/crates/adl-cli/src/: main.rs
reimplementation/adl2/crates/adl-cli/src/cmd/: bridges.rs  check.rs  dot.rs  ingest.rs  mod.rs  objects.rs  parallel.rs  run.rs  verify.rs
reimplementation/adl2/crates/adl-cli/tests/: cli.rs  ingest.rs
reimplementation/adl2/crates/adl-cli/tests/snapshots/: cli__bridges_ex02_csv_hjet1eta.snap  cli__bridges_ex02_csv_hnjets.snap  cli__bridges_ex02_make_histos_c.snap  cli__bridges_ex02_svg_hnjets.snap  cli__bridges_ex02_to_root_py.snap  cli__dot_ast_disjoint_pt.snap  cli__dot_flowchart_disjoint_pt.snap  cli__objects_cms_sus_16_032.snap  cli__run_cutflow_json_file.snap  cli__run_histos_json_file.snap  cli__run_json_bins_partition.snap  cli__run_json_cutflow_line.snap  cli__run_json_histograms_line.snap  cli__run_text_disjoint_pt.snap  cli__verify_explain_disjoint_pt.snap  cli__verify_human_disjoint_pt.snap  cli__verify_json_disjoint_pt.snap
reimplementation/adl2/crates/adl-difftest/: Cargo.toml
reimplementation/adl2/crates/adl-difftest/benches/: event_loop.rs
reimplementation/adl2/crates/adl-difftest/src/: casegen.rs  lib.rs  oracle.rs
reimplementation/adl2/crates/adl-difftest/tests/: cutflow_golden.rs  formula_interp_smoke.rs  generator.rs  histo_golden.rs  metamorphic.rs  p2_reducer_slice.rs  prop_encoder_vs_interp.rs  prop_reconcile_oracle.rs  regressions.rs
reimplementation/adl2/crates/adl-difftest/tests/fixtures/: ex02_events.jsonl
reimplementation/adl2/crates/adl-formula/: Cargo.toml
reimplementation/adl2/crates/adl-formula/src/: encode.rs  formula.rs  lib.rs  lin.rs
reimplementation/adl2/crates/adl-formula/tests/: encoder.rs  laws.rs  minmax_guards.rs
reimplementation/adl2/crates/adl-ingest/: Cargo.toml
reimplementation/adl2/crates/adl-ingest/fixtures/: PROVENANCE.md  delphes_badorder.root  delphes_mini.expected.jsonl  delphes_mini.root  delphes_nan.root  delphes_synth.expected.jsonl  delphes_synth.root  make_fixtures.py  nanoaod_ttbar.expected.jsonl
reimplementation/adl2/crates/adl-ingest/src/: lib.rs  profile.rs  reader.rs  script.rs
reimplementation/adl2/crates/adl-ingest/tests/: delphes_fixtures.rs
reimplementation/adl2/crates/adl-interp/: Cargo.toml
reimplementation/adl2/crates/adl-interp/examples/: run_events.rs
reimplementation/adl2/crates/adl-interp/src/: cutflow.rs  eval.rs  event.rs  histo.rs  json.rs  lib.rs  provenance.rs  sample.rs  sha256.rs  weights.rs
reimplementation/adl2/crates/adl-interp/tests/: composites.rs  cutflow_semantics.rs  histo_semantics.rs  merge_determinism.rs  reducers.rs  spec4_semantics.rs
reimplementation/adl2/crates/adl-sema/: Cargo.toml
reimplementation/adl2/crates/adl-sema/examples/: diag_probe.rs
reimplementation/adl2/crates/adl-sema/src/: dump.rs  ext.rs  hir.rs  intern.rs  lib.rs  merge.rs  objects.rs  quantity.rs  rat.rs  resolve.rs
reimplementation/adl2/crates/adl-sema/tests/: identity.rs  ir_census.rs  snapshots.rs
reimplementation/adl2/crates/adl-solver/: Cargo.toml
reimplementation/adl2/crates/adl-solver/src/: lib.rs  native.rs  num.rs  subprocess.rs
reimplementation/adl2/crates/adl-solver/tests/: conformance.rs
reimplementation/adl2/crates/adl-syntax/: Cargo.toml
reimplementation/adl2/crates/adl-syntax/examples/: parse_adl.rs
reimplementation/adl2/crates/adl-syntax/src/: ast.rs  diag.rs  dump.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
reimplementation/adl2/crates/adl-syntax/tests/: corpus_gate.rs  error_quality.rs  lexer_tests.rs  parser_tests.rs  snapshots.rs
reimplementation/adl2/crates/adl-viz/: Cargo.toml
reimplementation/adl2/crates/adl-viz/src/: dot.rs  label.rs  lib.rs
reimplementation/adl2/crates/adl-viz/tests/: dot_snapshots.rs
reimplementation/adl2/crates/rootfile/: Cargo.toml
reimplementation/adl2/crates/rootfile/fixtures/: PROVENANCE.md  reference.root  reference_v2.root
reimplementation/adl2/crates/rootfile/src/: datime.rs  file.rs  lib.rs  reader.rs  th1d.rs  th2d.rs  wbuf.rs
reimplementation/adl2/crates/rootfile/tests/: structure.rs  uproot_oracle.rs
reimplementation/adl2/crates/rootfile/tools/: check_with_uproot.py  dissect.py  extract_reference_v2.py  extract_streamerinfo.py  make_reference.py  make_reference_v2.py
reimplementation/adl2/docs/: COMPOSITE_SEMANTICS_PLAN.md  EXACT_RATIONAL_PLAN.md  QUICKSTART.md  SOUNDNESS_HARDENING.md
reimplementation/adl2/scripts/: corpus_gate.sh  fetch_delphes_sample.sh  fetch_nanoaod_sample.sh  gen_ex02_events.py
(+289 files in other folders)
