[workspace]
resolver = "2"
members = [
    "crates/adl-syntax",
    "crates/adl-sema",
    "crates/adl-interp",
    "crates/adl-ingest",
    "crates/adl-formula",
    "crates/adl-axioms",
    "crates/adl-solver",
    "crates/adl-analysis",
    "crates/adl-viz",
    "crates/adl-difftest",
    "crates/adl-cli",
    "crates/rootfile",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/dmr05d/adl2flowchart"

[workspace.dependencies]
# Internal crates (path deps wired now so later phases never edit the root).
adl-syntax = { path = "crates/adl-syntax" }
adl-sema = { path = "crates/adl-sema" }
adl-interp = { path = "crates/adl-interp" }
adl-ingest = { path = "crates/adl-ingest" }
adl-formula = { path = "crates/adl-formula" }
adl-axioms = { path = "crates/adl-axioms" }
adl-solver = { path = "crates/adl-solver" }
adl-analysis = { path = "crates/adl-analysis" }
adl-viz = { path = "crates/adl-viz" }
adl-difftest = { path = "crates/adl-difftest" }
rootfile = { path = "crates/rootfile" }

# Third-party (probed available against crates.io on 2026-06-11; see BUILD_NOTES.md).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
z3 = "0.20"
# Delphes TTree reading (SPEC_EVENT_PIPELINE §1.1): pinned exactly — the
# crate is v0.1.x/low-activity; the generated uproot oracle script detects
# any read infidelity (see adl-ingest).
oxyroot = "=0.1.25"
insta = "1"
proptest = "1"
# Throughput benchmark only (SPEC_EVENT_PIPELINE §5); kept out of the
# default build graph behind adl-difftest's `bench` feature.
criterion = "0.5"

[profile.dev]
# z3-sys is slow to compile; keep deps optimized while iterating on our code.
[profile.dev.package."*"]
opt-level = 1
