[package]
name = "adl-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Forwarded solver-backend feature: with `--no-default-features` the
# analysis still builds and runs over the SMT-LIB subprocess backend (or
# the interval-only no-solver degradation).
default = ["native"]
native = ["adl-solver/native"]

[dependencies]
adl-axioms.workspace = true
adl-formula.workspace = true
adl-interp.workspace = true
adl-sema.workspace = true
# Direct path dep (not workspace-inherited): workspace inheritance cannot
# override default-features, and this crate must forward the `native`
# backend feature explicitly.
adl-solver = { path = "../adl-solver", default-features = false }
adl-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
adl-difftest.workspace = true
insta.workspace = true
