[package]
name = "adl-certify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adl-formula.workspace = true
adl-sema.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
