[package]
name = "adl-certify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adl-formula.workspace = true
adl-sema.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true

[[bin]]
name = "smash2-recheck"
path = "src/bin/recheck.rs"
