[package]
name = "adl-difftest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# 100k-case mode for the encoder-vs-interpreter property battery
# (TESTING §2); normal `cargo test` runs 2000 cases.
deep = []
# Forward the in-process libz3 backend so the heavy oracle can run on the
# faster solver: `cargo test -p adl-difftest --features "deep native"`.
native = ["adl-analysis/native"]
# The SPEC_EVENT_PIPELINE §5 throughput benchmark. Off by default so
# criterion never enters the normal build/test graph; run with
# `cargo bench -p adl-difftest --features bench`.
bench = ["dep:criterion"]

[dependencies]
adl-syntax.workspace = true
adl-sema.workspace = true
adl-interp.workspace = true
adl-analysis.workspace = true
serde_json.workspace = true
proptest.workspace = true
criterion = { workspace = true, optional = true }

[dev-dependencies]
adl-formula.workspace = true
insta.workspace = true

[[bench]]
name = "event_loop"
harness = false
required-features = ["bench"]
