[package]
name = "adl-sema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adl-syntax.workspace = true
num-rational.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
insta.workspace = true
