[package]
name = "adl-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Native libz3 bindings are the PRIMARY backend (ADR-006). The SMT-LIB2
# subprocess backend is always compiled (no linking burden) and is the
# SECONDARY backend; CI runs one job with `--no-default-features` to
# prove the subprocess configuration stands on its own.
default = ["native"]
native = ["dep:z3"]

[dependencies]
adl-formula.workspace = true
adl-sema.workspace = true
z3 = { workspace = true, optional = true }

[dev-dependencies]
